# Labscript-windows

./: .gitignore  README.md  main.py  pyproject.toml
imaq-library/labscriptlib_prawn-demo/: connection_table.py
imaq-library/labscriptlib_prawn-demo/test_sequences/: pulse_test.py
